--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "apollo-server": "^3.5.0",
     "apollo-server-core": "^3.5.0",
+    "axios": "^1.2.1",
     "graphql": "^15.7.2"
   }
 }
