--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apollo-server": "^3.5.0",
     "apollo-server-core": "^3.5.0",
     "axios": "^1.2.1",
+    "dotenv": "^16.0.3",
     "graphql": "^15.7.2"
   }
 }
